--- a/index.html
+++ b/index.html
@@ -166,24 +166,24 @@
           <div class="col-lg-4">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4>غذای با کیفیت</h4>
+              <p>غذاهای ما با بهترین مواد تهیه و زیر نظر بهترین سرآشپز ها آماده میشوند. غذایی با کیفیت غذای خانگی </p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <h4>پاکیزگی رستوران</h4>
+              <p>محیط رستوران باید از آرامش و تمیزی عالی برخوردار باشد به ما اعتماد کنید که این شرایط را فراهم خواهیم کرد.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4>قیمت های مناسب</h4>
+              <p>با توجه به شرایط اقتصادی ما تمام تلاشمون رو کردیم که با بالا نگه داشتن کیفیت ، قیمت مناسبی هم داشته باشیم.</p>
             </div>
           </div>
 
@@ -193,21 +193,21 @@
     </section><!-- End Why Us Section -->
 
     <!-- ======= Menu Section ======= -->
-    <section id="menu" class="menu section-bg">
+    <section id="menu" class="menu section-bg" dir="rtl" >
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Menu</h2>
-          <p>Check Our Tasty Menu</p>
+          <h2>منو</h2>
+          <p>منوی خوشمزه ما را بررسی کنید</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Salads</li>
-              <li data-filter=".filter-specialty">Specialty</li>
+              <li data-filter="*" class="filter-active">همه</li>
+              <li data-filter=".filter-starters">پیش غذا</li>
+              <li data-filter=".filter-salads">سالاد</li>
+              <li data-filter=".filter-specialty">مخصوص</li>
             </ul>
           </div>
         </div>
@@ -217,90 +217,87 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>$5.95</span>
+              <a href="#">سوپ خرچنگ</a><span>75.000</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              خرچنگ ، پنیر ، روغن ، جو ، گوشت
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Bread Barrel</a><span>$6.95</span>
+              <a href="#">نان سوخاری</a><span>25.000</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              پودر نارگیل ، روغن ، جو ، گندم
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>$7.95</span>
+              <a href="#">کیک خرچنگ</a><span>53.000</span>
             </div>
             <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
-            </div>
+              کیک خرچنگی ظریفی که روی رول سوخاری با سس کاهو و تارتار سرو می شود.            </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>$8.95</span>
+              <a href="#">سالاد سزار</a><span>35.000</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              روغن زیتون، لیمو ترش ، نان تست ، کاهو ، فیله مرغ
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>$9.95</span>
+              <a href="#">مرغ سخاری</a><span>85.000</span>
             </div>
             <div class="menu-ingredients">
-              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+              مرغ گریل شده با سس مخصوص.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>$4.95</span>
+              <a href="#"> بشقاب مزارلا </a><span>61.000</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Greek Salad</a><span>$9.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
+              پنیر مزارلا ، نان سخواری ، فیله مرغ
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>$9.95</span>
+              <a href="#">سالاد اسفناج</a><span>76.000</span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+              اسفناج تازه با قارچ ، تخم مرغ آب پز سفت و وینگرت بیکن گرم</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">سالاد یونانی</a><span>93.000</span>
             </div>
+            <div class="menu-ingredients">
+              اسفناج تازه، رومی ترد، گوجه فرنگی و زیتون یونانی</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Roll</a><span>$12.95</span>
+              <a href="#">رول خرچنگ</a><span>47.000</span>
             </div>
             <div class="menu-ingredients">
-              Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+              گوشت خرچنگ چاق ، سس مایونز و کاهوی ترد روی یک رول حجیم برشته شده
             </div>
           </div>
 
@@ -796,18 +793,19 @@
     </section><!-- End Chefs Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" dir="rtl">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Contact Us</p>
+          <h2>ارتباط</h2>
+          <p>ارتباط با ما</p>
         </div>
       </div>
 
       <div data-aos="fade-up">
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3235.92925795774!2d51.45253651562243!3d35.80166998016657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e05b9213a0ef5%3A0xeb00fed564218403!2sTehran%20Province%2C%20Tehran%2C%20Andarzgoo%20Blvd%2C%20Iran!5e0!3m2!1sen!2s!4v1637914977788!5m2!1sen!2s" frameborder="0" allowfullscreen></iframe>
       </div>
+      
 
       <div class="container" data-aos="fade-up">
 
@@ -817,29 +815,29 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>موقعیت :</h4>
+                <p>تهران ، اندرزگو ، خیابان اسماعیلی</p>
               </div>
 
               <div class="open-hours">
                 <i class="bi bi-clock"></i>
-                <h4>Open Hours:</h4>
+                <h4>ساعت کاری :</h4>
                 <p>
-                  Monday-Saturday:<br>
-                  11:00 AM - 2300 PM
+                  شنبه - پنجشنبه :<br>
+                  11:00 - 22:00
                 </p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4>ایمیل :</h4>
+                <p>m.mahdibaseri@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>تماس :</h4>
+                <p>0937-196-2511</p>
               </div>
 
             </div>
@@ -851,24 +849,24 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="نام شما" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="ایمیل شما" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="موضوع" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="8" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="8" placeholder="پیام" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
+                <div class="loading">درحال بارگذاری</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">پیام شما با موفقیت ارسال شد. با تشکر از شما</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">ارسال پیام</button></div>
             </form>
 
           </div>
@@ -881,7 +879,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <footer id="footer" dir="rtl">
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -890,15 +888,15 @@
             <div class="footer-info">
               <h3>Restaurantly</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                تهران ، میرداماد  <br>
+                خیابان تهرانی ، چهار راه اول<br><br>
+                 <strong>تماس : </strong><a href="tell:09371962511"> 2511-196-0937 </a><br>
+                <strong>ایمیل : </strong><a href="mailto:m.mahdibaseri@gmail.com">m.mahdibaseri@gmail.com</a><br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://instagram.com/baseri.web/" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
@@ -906,32 +904,32 @@
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>لینک های مفید</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">خانه</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">درباره ما</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">سرویس ها</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">شرایط خدمات</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">حفظ حریم خصوصی</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>سیرویس های ما</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">طراحی وب</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">توسعه وب</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">مدیریت تولید</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">بازاریابی</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">طراحی گرافیکی</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>خبرنامه ما</h4>
+            <p>برای اطلاع از غذاهای ما و کارهای خفن ما در خبرنامه عضو شوید.</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" class="" value="عضویت">
             </form>
 
           </div>
@@ -942,14 +940,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Restaurantly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span> Baseri Web </span></strong> . All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://instagram.com/baseri.web/">Baseri Web</a>
       </div>
     </div>
   </footer><!-- End Footer -->
