--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
               <p>
                 تهران ، میرداماد  <br>
                 خیابان تهرانی ، چهار راه اول<br><br>
-                 <strong>تماس : </strong><a href="tell:09371962511"> 2511-196-0937 </a><br>
+                 <strong>تماس : </strong><a href="tel:09371962511"> 2511-196-0937 </a><br>
                 <strong>ایمیل : </strong><a href="mailto:m.mahdibaseri@gmail.com">m.mahdibaseri@gmail.com</a><br>
               </p>
               <div class="social-links mt-3">
