add some images

--- a/index.html
+++ b/index.html
@@ -307,12 +307,12 @@
     </section><!-- End Menu Section -->
 
     <!-- ======= Specials Section ======= -->
-    <section id="specials" class="specials">
+    <section id="specials" class="specials" dir="rtl">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Specials</h2>
-          <p>Check Our Specials</p>
+          <h2>ویژه ها</h2>
+          <p>ویژه های ما را بررسی کنید</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -340,12 +340,13 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Architecto ut aperiam autem id</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                    <h3>پیتزا مارگاریتا</h3>
+                    <p class="fst-italic">پیتزا مارگاریتا یکی از انواع پیتزاهای خوشمزه و پر طرفدار در جهان است که مانند دیگر پیتزاها اصالتی ایتالیایی دارد. <br><br>این پیتزای خوشمزه با گوجه فرنگی تهیه می شود و به همین دلیل در بعضی از نقاط جهان با نام پیتزا گوجه فرنگی هم شناخته می شود.
+                    </p>
+                    <p></p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-1.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/pizza.png" alt="" class="img-fluid rounded-circle">
                   </div>
                 </div>
               </div>
@@ -357,7 +358,7 @@
                     <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-2.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/meat-stack.jpg" alt="" class="img-fluid rounded-circle">
                   </div>
                 </div>
               </div>
@@ -369,7 +370,7 @@
                     <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-3.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/lobester.jpg" alt="" class="img-fluid rounded-circle">
                   </div>
                 </div>
               </div>
@@ -381,7 +382,7 @@
                     <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores sed qui veritatis aperiam quia a laborum inventore</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-4.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/berger.png" alt="" class="img-fluid rounded-circle">
                   </div>
                 </div>
               </div>
