--- a/index.html
+++ b/index.html
@@ -319,16 +319,16 @@
           <div class="col-lg-3">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item">
-                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">Modi sit est</a>
+                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">پیتزا مارگاریتا</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">Unde praesentium sed</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">استیک گریل شده</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">Pariatur explicabo vel</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">سوپ خرچنگ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-4">Nostrum qui quasi</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-4">بیف استراگانف</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Iusto ut expedita aut</a>
@@ -346,43 +346,43 @@
                     <p></p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/menu/pizza.png" alt="" class="img-fluid rounded-circle">
+                    <img src="assets/img/menu/pizza.png" alt="" class="img-fluid my-2 rounded-circle">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Et blanditiis nemo veritatis excepturi</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                    <h3>استیک گریل شده</h3>
+                    <p class="fst-italic">استیک گوشت یکی از انواع غذاهای خوشمزه و پرطرفدار است که به عنوان یک غذای بین المللی در سراسر جهان شناخته می شود، برای مشاهده این آموزش آشپزی در ادامه با چیشی همراه باشید.</p>
+                    <p>در رستوران ما بهترین استیک عمر خود را تجربه خواهید کرد.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/menu/meat-stack.jpg" alt="" class="img-fluid rounded-circle">
+                    <img src="assets/img/menu/meat-stack.jpg" alt="" class="img-fluid my-2 rounded-circle">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Impedit facilis occaecati odio neque aperiam sit</h3>
-                    <p class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                    <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                    <h3>سوپ خرچنگ</h3>
+                    <p class="fst-italic">ا توجه به وجود مواد مغذی و مواد معدنی موجود در خرچنگ، مصرف این ماده‌ی غذایی دارای فواید بی نظیری برای سلامتی است. اما خرچنگ در بسیاری از کشورها از جمله کشور ما جزء غذاهای مجلل به حساب می‌آید.</p>
+                    <p>زیرا این ماده‌ی غذایی بسیار گران‌قیمت است؛ طعمی بسیار دلپذیر دارد و هم‌چنین، حاوی مواد مغذی بسیاری است. </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/menu/lobester.jpg" alt="" class="img-fluid rounded-circle">
+                    <img src="assets/img/menu/lobester.jpg" alt="" class="img-fluid my-2 rounded-circle">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="tab-4">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Fuga dolores inventore laboriosam ut est accusamus laboriosam dolore</h3>
-                    <p class="fst-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis delectus</p>
-                    <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores sed qui veritatis aperiam quia a laborum inventore</p>
+                    <h3>بیف استراگانف</h3>
+                    <p class="fst-italic">بیف استروگانف یک غذای خوشمزه روسی است که از گوشت و خامه تهیه میشود. “بیف استروگانف” با پاستا و برنج و سیب زمینی نیز سرو میشود.</p>
+                    <p>با دستور پخت مخصوص آشپزهای ما طعم جدیدی از این غذا را در رستوران ما تجربه کنی.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/menu/berger.png" alt="" class="img-fluid rounded-circle">
+                    <img src="assets/img/menu/bif.jpg" alt="" class="img-fluid my-2 rounded-circle">
                   </div>
                 </div>
               </div>
