--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
   </div>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center">
-    <div class="container-fluid container-xl d-flex align-items-center flex-row-reverse justify-content-lg-between">
+  <header id="header" class="fixed-top d-flex align-items-center" dir="rtl">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
       <h1 class="logo me-auto me-lg-0"><a href="index.html">رستوران</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar order-last order-lg-0 ">
-        <ul class="flex-row-reverse header-menu">
+      <nav id="navbar" class="navbar order-last order-lg-0 " dir="rtl">
+        <ul class="header-menu">
           <li><a class="nav-link scrollto active" href="#hero">خانه</a></li>
           <li><a class="nav-link scrollto" href="#about">درباره ما</a></li>
           <li><a class="nav-link scrollto" href="#menu">منو</a></li>
@@ -71,23 +71,6 @@
           <li><a class="nav-link scrollto" href="#events">پیشنهاد ها</a></li>
           <li><a class="nav-link scrollto" href="#chefs">آشپز ها</a></li>
           <li><a class="nav-link scrollto" href="#gallery">گالری</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
           <li><a class="nav-link scrollto" href="#contact">ارتباط با ما</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -131,20 +114,17 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>رستوران</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+             رستوران ما از سال 1390 تا الان مشغول به کار میباشد.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> با بیش از 10 شعبه در سراسر کشور.</li>
+              <li><i class="bi bi-check-circle"></i>10 سال سابقه.</li>
+              <li><i class="bi bi-check-circle"></i>دارای لوح بهترین رستوران از وزارت بهداشت.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              رستوران ما در یک محیط بسیار جذاب و دنج قرار دارد که بهترین غذاهای سنتی و فست فود را برای مشتریان خود فراهم می کند. <br> کیفیت و تنوع غذایی رستوران ما بسیار زیاد است که برای هر ذائقه ای مناسب می باشد.
             </p>
           </div>
         </div>
@@ -330,9 +310,7 @@
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-4">بیف استراگانف</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Iusto ut expedita aut</a>
-              </li>
+           
             </ul>
           </div>
           <div class="col-lg-9 mt-4 mt-lg-0">
@@ -383,18 +361,6 @@
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/menu/bif.jpg" alt="" class="img-fluid my-2 rounded-circle">
-                  </div>
-                </div>
-              </div>
-              <div class="tab-pane" id="tab-5">
-                <div class="row">
-                  <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Est eveniet ipsam sindera pad rone matrelat sando reda</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
-                  </div>
-                  <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -503,7 +469,8 @@
         </div>
 
       </div>
-    </section><!-- End Events Section -->
+    </section>
+    <!-- End Events Section -->
 
     <!-- ======= Book A Table Section ======= -->
     <section id="book-a-table" class="book-a-table" dir="rtl">
@@ -557,12 +524,12 @@
     </section><!-- End Book A Table Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <section id="testimonials" class="testimonials section-bg" dir="rtl">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>What they're saying about us</p>
+          <h2>نظرها</h2>
+          <p>نظرات شما درباره ما</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -571,9 +538,10 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                     نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
+                  <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Saul Goodman</h3>
@@ -584,9 +552,10 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                     نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
+                  <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -597,9 +566,10 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                     نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
+                  <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -610,9 +580,10 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                     نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
+                  <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
@@ -623,9 +594,10 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                     نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
+                  <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
@@ -887,7 +859,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Restaurantly</h3>
+              <h3>رستوران</h3>
               <p>
                 تهران ، میرداماد  <br>
                 خیابان تهرانی ، چهار راه اول<br><br>
