--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul class="header-menu">
           <li><a class="nav-link scrollto active" href="#hero">خانه</a></li>
           <li><a class="nav-link scrollto" href="#about">درباره ما</a></li>
-          <li><a class="nav-link scrollto" href="#menu">م645نو</a></li>
+          <li><a class="nav-link scrollto" href="#menu">منو</a></li>
           <li><a class="nav-link scrollto" href="#specials">مخصوص</a></li>
           <li><a class="nav-link scrollto" href="#events">پیشنهاد ها</a></li>
           <li><a class="nav-link scrollto" href="#chefs">آشپز ها</a></li>
